Fix image spacing

--- a/src/scss/modules/_media.scss
+++ b/src/scss/modules/_media.scss
@@ -26,7 +26,7 @@
 
     @media screen and (min-width: $md) {
         float: left;
-        margin: 1.5rem 1.25rem 0.5rem 0;
+        margin: 0.5rem 1rem 0.5rem 0;
     }
 }
 
@@ -44,7 +44,7 @@
 
     @media screen and (min-width: $md) {
         float: right;
-        margin: 1.5rem 0 0.5rem 1.25rem;
+        margin: 0.5rem 0 0.5rem 1rem;
     }
 }
 
